# nv-cli

./: .gitignore  README.md  pyproject.toml
nvcli/: __init__.py  config.py  main.py  nvidia_client.py
nvcli/agent/: executor.py  memory.py  planner.py  tools.py
nvcli/commands/: auth.py  chat.py  code.py  config_cmd.py  doctor.py  logs.py  models.py  patch.py  run.py  testgen.py
nvcli/ui/: diff_view.py  stream.py  tui.py
tests/: conftest.py  test_chat.py  test_commands.py  test_config.py  test_diff_view.py  test_nvidia_client.py  test_planner.py  test_run.py  test_tools.py  test_tui.py
